@@ -50,7 +50,7 @@ locateJava() {
 }
 
 setupDefaults() {
-  DEFAULT_JAVA_OPTS="-Djsse.enableSNIExtension=false"
+    DEFAULT_JAVA_OPTS="-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=60 -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark"
     DEFAULT_JAVA_DEBUG_OPTS="-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005"
 }
 
